--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=bni
 
-spring.datasource.url=jdbc:postgresql://postgres-db:5432/fufufafa
+# spring.datasource.url=jdbc:postgresql://localhost:5431/fufufafa
+spring.datasource.url=jdbc:postgresql://localhost:5431/fufufafa
 spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -12,4 +13,5 @@ spring.jpa.show-sql=true
 management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.health.probes.enabled=true
 management.endpoint.health.show-details=always
-
+file.upload-dir=uploads
+spring.serlet.multipart.enabled=true
