--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.jpa.show-sql=true
 management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.health.probes.enabled=true
 management.endpoint.health.show-details=always
-file.upload-dir=uploads
+file.upload-dir=/app/uploads
 spring.serlet.multipart.enabled=true
