--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=bni
 
-# spring.datasource.url=jdbc:postgresql://localhost:5431/fufufafa
 spring.datasource.url=jdbc:postgresql://postgres-db:5432/fufufafa
+#spring.datasource.url=jdbc:postgresql://localhost:5432/bniproject
 spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -10,8 +10,10 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-management.endpoints.web.exposure.include=health,info,prometheus
+# Ini yang ditambhkan
+management.endpoints.web.exposure.include=health,info
 management.endpoint.health.probes.enabled=true
 management.endpoint.health.show-details=always
+
 file.upload-dir=/app/uploads
-spring.serlet.multipart.enabled=true
+spring.servlet.multipart=true
