--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
 name: Trigger OpenShift Build
+
 on:
   push:
     branches:
@@ -20,8 +21,8 @@ jobs:
 
     - name: Login to OpenShift
       run: |
-        oc login --token="${{secrets.OC_TOKEN}}" --server="${{secrets.OC_SERVER}}"
+        oc login --token=${{ secrets.OC_TOKEN }} --server=${{ secrets.OC_SERVER }}
 
-    - name: Start OpenShift Build
+    - name: Start OpenShift build
       run: |
-        oc start-build "${{secrets.OC_BUILD_NAME}}" -n "${{secrets.OC_NAMESPACE}}" --wait --follow
+        oc start-build ${{ secrets.OC_BUILD_NAME }} -n ${{ secrets.OC_NAMESPACE }} --wait --follow
