--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,16 @@ jobs:
     - name: Start OpenShift build
       run: |
         oc start-build ${{ secrets.OC_BUILD_NAME }} -n ${{ secrets.OC_NAMESPACE }} --wait --follow
+
+
+  notify:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        
+      - name: Send Telegram Notification
+        run: |
+          curl -X POST "https://api.telegram.org/bot8006163434:AAFglGBFQZssn33_w4E1ZF08UTMVxkj58kA/sendMessage" \
+            -d chat_id=742642835 \
+            -d text="🚨 Merge to Main/Master Branch 🚨\nA merge has been made to the main/master branch. Please review the changes!"
