--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,41 @@
-name: Trigger OpenShift Build
+# name: Trigger OpenShift Build
+
+# on:
+#   push:
+#     branches:
+#       - master
+
+# jobs:
+#   trigger-build:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - name: Checkout source code
+#       uses: actions/checkout@v3
+
+    # - name: Install OC CLI
+    #   run: |
+    #     curl -LO https://mirror.openshift.com/pub/openshift-v4/clients/ocp/latest/openshift-client-linux.tar.gz
+    #     tar -xzf openshift-client-linux.tar.gz
+    #     sudo mv oc kubectl /usr/local/bin/
+
+    # - name: Login to OpenShift
+    #   run: |
+    #     oc login --token=${{ secrets.OC_TOKEN }} --server=${{ secrets.OC_SERVER }}
+
+    # - name: Start OpenShift build
+    #   run: |
+    #     oc start-build ${{ secrets.OC_BUILD_NAME }} -n ${{ secrets.OC_NAMESPACE }} --wait --follow
+
+name: Notify Telegram on Merge to Main/Master
 
 on:
   push:
     branches:
+      - main
       - master
 
 jobs:
-  trigger-build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout source code
-      uses: actions/checkout@v3
-
-    - name: Install OC CLI
-      run: |
-        curl -LO https://mirror.openshift.com/pub/openshift-v4/clients/ocp/latest/openshift-client-linux.tar.gz
-        tar -xzf openshift-client-linux.tar.gz
-        sudo mv oc kubectl /usr/local/bin/
-
-    - name: Login to OpenShift
-      run: |
-        oc login --token=${{ secrets.OC_TOKEN }} --server=${{ secrets.OC_SERVER }}
-
-    - name: Start OpenShift build
-      run: |
-        oc start-build ${{ secrets.OC_BUILD_NAME }} -n ${{ secrets.OC_NAMESPACE }} --wait --follow
-
-
   notify:
     runs-on: ubuntu-latest
     steps:
